feat [docs]: rota /products/search?q= documentada e testada com êxito.
